Closed
Bug 225523
Opened 22 years ago
Closed 22 years ago
Minor dreftool change to get consistent bonsai output
Categories
(SeaMonkey :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
430 bytes,
patch
|
timwatt
:
review+
|
Details | Diff | Splinter Review |
On raistlin-w2k i got this:
<br><a
href="http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/profile/src/nsProfileAccess.cpp&rev=1.72&mark=1219#121
4">/mozilla/profile/src/nsProfileAccess.cpp:1219</a> Deref-error: "mProfiles"
On boffo-linux i got this:
<br><a
href="http://bonsai.mozilla.org/cvsblame.cgi?file=src/nsProfileAccess.cpp&rev=1.72&mark=1219#121
4">src/nsProfileAccess.cpp:1219</a> Deref-error: "mProfiles"
Ideally I'd like this:
<br><a
href="http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/profile/src/nsProfileAccess.cpp&rev=1.72&mark=1219#121
4">mozilla/profile/src/nsProfileAccess.cpp:1219</a> Deref-error: "mProfiles"
Attachment #135370 -
Flags: review?(riceman+bmo)
Comment on attachment 135370 [details] [diff] [review]
change
Seems reasonable.
Attachment #135370 -
Flags: review?(riceman+bmo) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•