Bug 225523 Minor dreftool change to get consistent bonsai output r=riceman+bmo@mail.rit.edu